kyverno/cosign-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-microbank-images
spec:
  validationFailureAction: Enforce
  background: false
  rules:
    - name: verify-cosign-keyless
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - student-research
      verifyImages:
        - imageReferences:
            - "ghcr.io/dezsokee/microbank-*"
          attestors:
            - entries:
                - keyless:
                    subject: "https://github.com/dezsokee/microbank/.github/workflows/*"
                    issuer: "https://token.actions.githubusercontent.com"
                    rekor:
                      url: https://rekor.sigstore.dev
